# test_package

./: MANIFEST.in  PKG-INFO  README.rst  setup.cfg  setup.py
migrations/: 0001_initial.py
models/: __init__.py
