[metadata]
name = database
version = 0.1
description = Shared db
long_description = file: README.rst
url = https://www.example.com/
author = Your Name
author_email = yourname@example.com
license = BSD-3-Clause  # Example license
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 5.0.4
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires = 
	Django >= 5.0.4

[egg_info]
tag_build = 
tag_date = 0

